# eiderflat

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
apps/eiderflat_app/: Cargo.toml  build.rs
apps/eiderflat_app/assets/: PACKAGING.md  eiderflat.desktop
apps/eiderflat_app/src/: main.rs
crates/eiderflat_boolean/: Cargo.toml
crates/eiderflat_boolean/src/: boolean_ops.rs  clip.rs  lib.rs  region.rs  weld.rs
crates/eiderflat_boolean/tests/: spec_behavior.rs
crates/eiderflat_cad/: Cargo.toml
crates/eiderflat_cad/src/: draw.rs  edit.rs  grips.rs  hatch.rs  inquiry.rs  lib.rs  selection.rs  snap.rs
crates/eiderflat_document/: Cargo.toml
crates/eiderflat_document/src/: dimension.rs  document.rs  entity.rs  layer.rs  lib.rs  properties.rs
crates/eiderflat_geometry/: Cargo.toml
crates/eiderflat_geometry/src/: curve.rs  lib.rs  nurbs.rs  point.rs  transform.rs  util.rs
crates/eiderflat_geometry/src/ops/: blend.rs  curvature.rs  distance.rs  intersect.rs  mod.rs  offset.rs  split_reverse.rs  tangent.rs
crates/eiderflat_geometry/src/primitives/: circular_arc.rs  cubic_bezier.rs  elliptical_arc.rs  line_seg.rs  polycurve.rs
crates/eiderflat_geometry/tests/: review_probes.rs  spec_behavior.rs
crates/eiderflat_io/: Cargo.toml
crates/eiderflat_io/src/: dim.rs  dxf.rs  lib.rs  native.rs  svg.rs
crates/eiderflat_io/tests/: review_probes.rs
crates/eiderflat_spatial/: Cargo.toml
crates/eiderflat_spatial/src/: lib.rs  morton.rs  quadtree.rs
crates/eiderflat_spatial/tests/: spec_behavior.rs
crates/eiderflat_ui/: Cargo.toml
crates/eiderflat_ui/assets/logotype/: eiderFLAT_logo.ai  eiderFLAT_symbol.ai
crates/eiderflat_ui/examples/: gen_app_icon.rs
crates/eiderflat_ui/src/: command.rs  fonts.rs  history.rs  icons.rs  lib.rs  state.rs  theme.rs  tools.rs  view.rs  view_transform.rs
crates/eiderflat_ui/src/state/: contextual.rs  modify.rs
crates/eiderflat_ui/src/view/: chrome.rs  overlays.rs  palette.rs  render.rs  tessellate.rs
crates/eiderflat_ui/tests/: modify_tools.rs  review_probes.rs  text_focus.rs
