[package]
publish = false
name = "eiderflat_app"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
[[bin]]
name = "eiderflat"
path = "src/main.rs"
[dependencies]
eiderflat_geometry = { path = "../../crates/eiderflat_geometry" }
eiderflat_ui       = { path = "../../crates/eiderflat_ui" }
eframe = "0.34"
